--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -131,7 +131,7 @@
       height: 165px;
     }
   }
-  .query-suggestion-list-scroll-component {
+  .data-preview-scroll-container {
     color: var(--react-autoql-text-color-primary);
     flex: 1;
 
