--- a/src/index.scss
+++ b/src/index.scss
@@ -11,10 +11,6 @@
   padding-top: 10px;
 }
 
-.react-autosuggest__suggestions-container--open::-webkit-scrollbar {
-  visibility: visible !important;
-}
-
 span .react-autoql-icon {
   vertical-align: middle;
   padding-bottom: 3px;
